<resources>
    <string name="app_name">Gastos de viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_litro">KM\'s por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="notificcampos">Preecha todos os campos</string>
    <string name="valoresValidos">Por favor, informe valores válidos</string>
</resources>